# cli-usb

./: Cargo.toml  README.md
crate/main/src/: main.rs
crate/members/app/: Cargo.toml
crate/members/app/src/: lib.rs
crate/members/app/src/app_error/: app_error.rs
crate/members/app/src/app_port/: mod.rs  usb_mp_port.rs
crate/members/app/src/usecase/: mod.rs
crate/members/domain/: Cargo.toml
crate/members/domain/src/: lib.rs
crate/members/domain/src/domain_error/: mod.rs  usb_mp_errors.rs
crate/members/domain/src/domain_model/: mod.rs  usb_model.rs
crate/members/domain/src/domain_port/: mod.rs  usb_port.rs
crate/members/infra/: Cargo.toml
crate/members/infra/src/: lib.rs
crate/members/infra/src/adap/: domain_adap.rs  mod.rs
